--- a/src/components/SimpleWeather/style.scss
+++ b/src/components/SimpleWeather/style.scss
@@ -2,11 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 27.5rem;
-  height: 35rem;
-  background: linear-gradient(179.15deg, #801A00 0.73%, #1C1C1C 69.52%);
+  width: 20rem;
+  background: linear-gradient(179.15deg, #1c1c1c 0.73%, #1c1c1c 69.52%);
+  box-shadow: #000 10px 10px 30px;
   border-radius: 30px;
-  padding: 0 3rem;
+  padding: 1.5rem 3rem;
+  margin-bottom: 1rem;
+
+  .err-msg {
+    color: #fff;
+    font-size: 1.6rem;
+    padding: 20px 0px;
+  }
 
   .line-city {
     width: 100%;
@@ -17,20 +24,20 @@
       color: #fff;
       font-weight: 700;
       font-size: 2rem;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     img {
-      height: 2rem;
-      width: 3rem;
       margin-left: 10px;
     }
-
   }
 
   .weather {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     color: #fff;
@@ -40,8 +47,10 @@
       display: flex;
       align-items: center;
       flex-direction: column;
-      
+      margin-bottom: 2rem;
       strong {
+        width: 9rem;
+        text-align: center;
         font-size: 0.9rem;
         font-weight: 600;
         text-transform: capitalize;
@@ -59,7 +68,7 @@
 
       strong {
         font-weight: 800;
-        font-size: 4.5rem;
+        font-size: 4.1rem;
       }
     }
   }
@@ -67,12 +76,24 @@
   .line-info {
     width: 100%;
     color: #fff;
-    
-    
-    h2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+
+    h2 {
       font-size: 1.2rem;
       font-weight: 600;
     }
-    
+  }
+}
+
+@media screen and (min-width: 425px) {
+  .main-container {
+    width: 27.5rem;
+
+    .weather {
+      flex-direction: row;
+    }
   }
 }
